Set up VS2019 on CI with Azure Pipelines

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,9 +3,11 @@ add_executable(unit_test
 	catch.hpp
 )
 
-set_property(TARGET unit_test PROPERTY CXX_STANDARD 17)
-set_property(TARGET unit_test PROPERTY CXX_STANDARD_REQUIRED ON)
-set_property(TARGET unit_test PROPERTY CXX_EXTENSIONS OFF)
+if(NOT CXX_OVERRIDE_STANDARD)
+	set_property(TARGET unit_test PROPERTY CXX_STANDARD 17)
+	set_property(TARGET unit_test PROPERTY CXX_STANDARD_REQUIRED ON)
+	set_property(TARGET unit_test PROPERTY CXX_EXTENSIONS OFF)
+endif()
 
 add_test(unit_test unit_test)
 
